--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 :root
 {
-  --yellow: #F5C32C;
+    --yellow: #F5C32C;
     --orange : #FCA61F;
     --black : #242D49;
-    --darkpurple: #c320fa ; 
+   /* --darkpurple: #c320fa ;*/ 
+    --darkpurple:#0e8bca;
     --gray : #788097;
     --blueCard : #DDF8FE;
     --purple: rgb(238 210 255);
     --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
     --orangeCard: rgba(252, 166, 31, 0.45);
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
+    --javaRed:#eb2324;
+    --javaBlue: #0e8bca;
 }
 
 .App{
