--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@
   color: white;
   font-size:16px;
   padding: 8px 20px 8px 20px;
-  background:linear-gradient(180deg, #1f6cfc 90%, #0e8bca 99% );
-  box-shadow:0px 20px 24px 3px rgba(22, 114, 220, 0.45);
+  background:linear-gradient(180deg, #eb2324 100%, #0e8bca 99% );
+  box-shadow:0px 20px 24px 3px rgba(220, 22, 22, 0.47);
 
 
 
