--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,18 @@
     --orange : #FCA61F;
     --black : #242D49;
    /* --darkpurple: #c320fa ;*/ 
-    --darkpurple:#0e8bca;
+    --darkpurple:#4E4E50;
     --gray : #788097;
     --blueCard : #DDF8FE;
     --purple: rgb(238 210 255);
     --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
     --orangeCard: rgba(252, 166, 31, 0.45);
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
-    --javaRed:#eb2324;
-    --javaBlue: #0e8bca;
+    --javaRed:#C3073F;
+    --javaBlack:#1A1A1D;
+    --javagrey: #4E4E50;
+    --javadarkRed:#950740;
+    --javaDarkerRed:#6F2232;
 }
 
 .App{
@@ -28,8 +31,8 @@
   color: white;
   font-size:16px;
   padding: 8px 20px 8px 20px;
-  background:linear-gradient(180deg, #eb2324 100%, #0e8bca 99% );
-  box-shadow:0px 20px 24px 3px rgba(220, 22, 22, 0.47);
+  background:linear-gradient(180deg, #C3073F 100%, #0e8bca 99% );
+  box-shadow:0px 10px 24px 3px rgba(220, 22, 22, 0.47);
 
 
 
