--- a/src/component/Toggle/Toggle.css
+++ b/src/component/Toggle/Toggle.css
@@ -1,7 +1,7 @@
 .toggle{
     display: flex;
     justify-content: space-between;
-    border: 3px solid var(--darkpurple);
+    border: 3px solid var(--javaRed);
     border-radius: 1rem;
     position: relative;
     padding: 2px;
@@ -11,11 +11,11 @@
 .toggle>*{
     width: 1rem;
     height: 1rem;
-    color: var(--darkpurple);
+    color: var(--javaRed);
 }
 
 .t-button{
     border-radius: 100%;
-    background-color: var(--darkpurple);
+    background-color: var(--javaRed);
     position: absolute;
 }
