--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 }
 
 .button:hover{
-  background: white;
+  background: rgba(255, 255, 255, 0.925);
   cursor: pointer;
   color: var(--darkpurple);
   border: 1px solid var(--purple);
