--- a/src/component/Services/Services.css
+++ b/src/component/Services/Services.css
@@ -1,23 +1,51 @@
-.services{
-    
+.services {
+    /* overflow: visible; */
+    /* background-color: aquamarine; */
     max-width: 1200px;
     display: flex;
     height: 20hv;
+    /* background-color: antiquewhite; */
     margin: 5rem auto;
-    padding-right: 50px;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* padding-right: 50px; */
+    /* padding: -100px; */
     margin-top: -10%;
-        
-
+    /* position: absolute; */
+    /* background-color: antiquewhite; */
+    /* width: 20%; */
 }
 
-.s-right{
+.cards {
 
+    position: relative;
+    padding: 2%;
+    /* height: 500%; */
+    width: 100%;
+    /* background-color: aqua; */
+    /* background-color: aqua; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cards div {
+    position: relative;
+    margin: 2% 2%;
+}
+
+.s-right {
+    /* background-color: blue; */
+    /* width: 70%; */
+    height: 40%;
+    /* text-align: ; */
     display: flex;
     flex-direction: column;
-    position: relative;
+    position: absolute;
+    z-index: 1;
+    width: 25rem;
 }
 
-.s-right>:nth-child(1){
+.s-right>:nth-child(1) {
 
     color: var(--black);
     font-size: 4rem;
@@ -27,7 +55,7 @@
 }
 
 
-.s-right>:nth-child(2){
+.s-right>:nth-child(2) {
 
     color: var(--grey);
     font-size: 16px;
@@ -36,39 +64,34 @@
 
 }
 
-.s-button{
+.s-button {
 
     width: 6rem;
     height: 2rem;
     margin-top: 1rem;
 }
 
-.cards{
-
-    position: relative;
-
-}
-
-.cards>*{
+/* .cards>* {
 
     position: absolute;
-}
+} */
 
 @media screen and (max-width: 480px) {
     .services {
-      margin-top: -10%;
-      flex-direction: column;
-      gap: 5rem;
-      height: 90rem;
-      padding: 0;
+        margin-top: -10%;
+        flex-direction: column;
+        gap: 5rem;
+        height: 90rem;
+        padding: 0;
     }
-  
+
     .cards {
-      display: flex;
-      flex-direction: column;
-      gap: 17rem;
+        display: flex;
+        flex-direction: column;
+        gap: 17rem;
     }
-    .cards > * {
-      position: static;
+
+    .cards>* {
+        position: static;
     }
-  }
+}
